# task_tracker_api

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  ChatGPT-Portfolio website development.md  Dockerfile  Makefile  README.md  docker-compose.yml  dockerignore  env.example  main.py  makefile  models.py  pyproject.toml  requirements.in  requirements.txt  schema_evolution.md  setup.sh  tasks.db
apis/: database.py  main.py  models.py
app/: db.py  main.py  settings.py
app/apis/: base.py  exceptions.py  response.py
app/apis/v1/: base.py  user.py
app/core/: config.py  db.py  exceptions.py  hash_ids.py  jwt.py  logger.py  logging.py  middlewares.py  security.py  services.py
app/db/: base.py
app/db/models/: __init__.py  base.py  block.py  daily_commitment.py  daily_reflection.py  execution_log.py  goal.py  phase.py  theme.py  track.py  user.py  vision.py
app/migrations/: env.py
app/migrations/versions/: 166799f70db9_initial.py  746c29dbfce6_created_schema_vision_tracker.py  8372011e4449_initial.py  ae1fac635ff8_initial.py
app/models/: auth.py  users.py
app/routers/v1/: users.py
app/services/: base.py  user.py
app/user/: apis.py  repo.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 50c249976af0_initial.py  f32728ec2d25_user_and_token_migration.py
requirements/: dev.txt  prod.txt
