[project]
name = "tt-apis"
version = "0.1.0"
description = ""
authors = [
    {name = "Harshit ",email = "pawarharshit358@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.117.1,<0.118.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "make (>=0.1.6.post2,<0.2.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
