[project]
name = "pragya-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Harshit", email = "pawarharshit358@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4,<0.125.0",
    "uvicorn>=0.38.0,<0.39.0",
    "sqlalchemy>=2.0.45,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "psycopg[binary]>=3.3.2,<4.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pydantic[email]>=2.12.5,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "hashids>=1.3.1,<2.0.0",
    "structlog>=25.5.0,<26.0.0",
    "bcrypt>=3.2.2,<4.0.0",
    "passlib>=1.7.4,<2.0.0",
    "greenlet>=3.3.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0,<26.0.0",
    "ruff>=0.14.9,<0.15.0",
    "alembic>=1.17.2,<2.0.0",
    "isort>=7.0.0,<8.0.0",
    "pre-commit>=4.5.1",
]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | env
  | migrations
  | _pycache_
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py310"
# Ensure these are at the top level of [tool.ruff]
extend-exclude = ["migrations", "env", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "B", "RUF", "I"]
ignore = ["E501"]  # Line length handled by formatter
